===== 0.99.6 (Jan ??, 2013) =====

* ePub: fixed SVG namespace processing

===== 0.99.5 (Dec 24, 2012) =====

* First public release for MacOS
* Introduced application menu
* Keyboard shortcuts for popular actions
* New preferences dialog
* Page header is shown by default in main window instead of scrollbar
* Text search does not work in this release

===== 0.99.4 (Nov 30, 2012) =====

* Bulgarian hyphenation patterns, converted by Kaloyan Raev
* Network catalogs: fixed Cyryllic names rendering
* Showing suggestions in search field
* Fixed bug with duplicates series items in LitRes catalog
* Fixed different network bugs in Network Library

===== 0.99.3 (Nov 18, 2012) =====

* Code is compilable for MacOS X (10.5+) with Qt library
* Added ability to read books from archives like ".tar", ".tar.gz" and ".tar.bz2" (original code by Serge Osnach)
* Added 'Recommend' item for LitRes network catalog
* Added convenient classification (by date, by author, by title, by series) for 'My Books' in LitRes network catalog
* Fixed crash on some ePubs from Project Gutenberg
* Encoding detection for doc (ms word) files
* RTF: fixed footnotes support
* ePub: fixed <pre>formatted text support
* Implemented new network library view
* Fixed crash after library scanning or book opening on some *.doc files

===== 0.99.2 (Sep 7, 2012) =====

* Added "My Books" (purchased books) section for LitRes catalog
* Hebrew localization (by David Kachan)
* Updated Finnish localization (by Marko Vertainen)
* Misc build & installation fixes (by kensington)

===== 0.99.1 (Jul 26, 2012) =====

* Fixed bug with freezing at start
* List of network libraries is updated now from fbreader.org
* Fixed working with secured connections (now authentification and books buying on LitRes.ru catalog works)
* Image support for Ms-Word doc format

===== 0.99.0 (Jul 5, 2012) =====

* Esperanto interface localization has been added (by Katarína Nosková)
* Hyphenation patterns for Polish (by Tomasz Długosz)